--- a/css/style.css
+++ b/css/style.css
@@ -532,7 +532,7 @@ h6,
 }
 
 .footer .btn.btn-link:hover {
-    color: var(--primary);
+    color: #1ab036;
     letter-spacing: 1px;
     box-shadow: none;
 }
